--- a/templates/water.html
+++ b/templates/water.html
@@ -1,53 +1,143 @@
 <div id="water_buttons">
     <a href="#/"><button class="btn btn-primary">Go back</button></a>
+    <button class="btn btn-primary" data-ng-click="changeView(water)" data-ng-show="water.viewing != ''">
+        {{water.viewing}}
+    </button>
 </div>
 
-<div class="row" ng-repeat="row in water.violations" id="water_data">
-    <strong>Violation #{{ row.VIOID }}</strong>
-    <table class="table table-hover">
-        <tr>
-            <td width="20%">Violation Start Date</td>
-            <td width="80%">{{row.COMPPERBEGINDATE}}</td>
-        </tr>
-        <tr>
-            <td>Violation End Date</td>
-            <td>{{row.COMPPERENDDATE}}</td>
-        </tr>
-        <tr>
-            <td>Enforcement Date</td>
-            <td>{{row.ENFDATE}}</td>
-        </tr>
-        <tr>
-            <td>Enforcement Action</td>
-            <td>{{row.ENFACTIONNAME}}</td>
-        </tr>
-        <tr>
-            <td>Contaminant</td>
-            <td>{{row.CNAME}} 
-                <a href="https://en.wikipedia.org/wiki/Special:Search/{{row.CNAME}}" target="new">
-                    <button class="btn btn-default">Wiki</button>
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>Definition</td>
-            <td>{{row.DEFINITION}}</td>
-        </tr>
-        <tr>
-            <td>Health Effects</td>
-            <td>{{row.HEALTHEFFECTS}}</td>
-        </tr>
-        <tr>
-            <td>Contaminant Sources</td>
-            <td>{{row.SOURCES}}</td>
-        </tr>
-        <tr>
-            <td>Facility Name</td>
-            <td>{{row.PWSNAME}}</td>
-        </tr>
-        <tr>
-            <td>Status</td>
-            <td>{{row.VNAME}}</td>
-        </tr>
-    </table>
+<div data-ng-show="water.viewing == ''" style="padding:60px;">
+    <div class="panel panel-info">
+        <div class="panel-heading">Water</div>
+        <div class="panel-body">
+        There is no data to show!
+        </div>
+    </div>
 </div>
+
+<div data-ng-show="water.viewing != ''">
+    <div class="row" id="water_info">
+        <div class="panel panel-info">
+            <div class="panel-heading">Water</div>
+            <div class="panel-body">
+            There were {{ water.violationsLength }} possibly open violations found, with a total of {{ water.dataLength }} past violations in this area. Each violation is from a particular water facility, including neighborhood facilities. It's possible that facilities have fixed their problem but the data wasn't updated. Be mindful of the date and location. Common terms: NOV = "Notice of Violation". St = State. Fed = Federal. AO = "Administrative Order".
+            </div>
+        </div>
+    </div>
+    <div infinite-scroll="loadMore(water, 'violations')" infinite-scroll-distance="1" infinite-scroll-disabled="water.viewing!='Open Violations'">
+        <div class="row" data-ng-repeat="row in water.violations" data-ng-show="water.viewing=='Open Violations'">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Violation ID</th>
+                        <th>{{ row.VIOID }}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td width="20%">Violation Start Date</td>
+                        <td width="80%">{{row.COMPPERBEGINDATE}}</td>
+                    </tr>
+                    <tr>
+                        <td>Violation End Date</td>
+                        <td>{{row.COMPPERENDDATE}}</td>
+                    </tr>
+                    <tr>
+                        <td>Enforcement Date</td>
+                        <td>{{row.ENFDATE}}</td>
+                    </tr>
+                    <tr>
+                        <td>Enforcement Action</td>
+                        <td>{{row.ENFACTIONNAME}}</td>
+                    </tr>
+                    <tr>
+                        <td>Contaminant</td>
+                        <td>{{row.CNAME}} 
+                            <a href="https://en.wikipedia.org/wiki/Special:Search/{{row.CNAME}}" target="new">
+                                <button class="btn btn-default">Wiki</button>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Definition</td>
+                        <td>{{row.DEFINITION}}</td>
+                    </tr>
+                    <tr>
+                        <td>Health Effects</td>
+                        <td>{{row.HEALTHEFFECTS}}</td>
+                    </tr>
+                    <tr>
+                        <td>Contaminant Sources</td>
+                        <td>{{row.SOURCES}}</td>
+                    </tr>
+                    <tr>
+                        <td>Facility Name</td>
+                        <td>{{row.PWSNAME}}</td>
+                    </tr>
+                    <tr>
+                        <td>Violation Name</td>
+                        <td>{{row.VNAME}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div infinite-scroll="loadMore(water, 'data')" infinite-scroll-distance="1" infinite-scroll-disabled="water.viewing != 'Open and Closed Violations'">
+        <div class="row" data-ng-repeat="row in water.data" data-ng-show="water.viewing=='Open and Closed Violations'">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Violation ID</th>
+                        <th>{{ row.VIOID }}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td width="20%">Violation Start Date</td>
+                        <td width="80%">{{row.COMPPERBEGINDATE}}</td>
+                    </tr>
+                    <tr>
+                        <td>Violation End Date</td>
+                        <td>{{row.COMPPERENDDATE}}</td>
+                    </tr>
+                    <tr>
+                        <td>Enforcement Date</td>
+                        <td>{{row.ENFDATE}}</td>
+                    </tr>
+                    <tr>
+                        <td>Enforcement Action</td>
+                        <td>{{row.ENFACTIONNAME}}</td>
+                    </tr>
+                    <tr>
+                        <td>Contaminant</td>
+                        <td>{{row.CNAME}} 
+                            <a href="https://en.wikipedia.org/wiki/Special:Search/{{row.CNAME}}" target="new">
+                                <button class="btn btn-default">Wiki</button>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Definition</td>
+                        <td>{{row.DEFINITION}}</td>
+                    </tr>
+                    <tr>
+                        <td>Health Effects</td>
+                        <td>{{row.HEALTHEFFECTS}}</td>
+                    </tr>
+                    <tr>
+                        <td>Contaminant Sources</td>
+                        <td>{{row.SOURCES}}</td>
+                    </tr>
+                    <tr>
+                        <td>Facility Name</td>
+                        <td>{{row.PWSNAME}}</td>
+                    </tr>
+                    <tr>
+                        <td>Violation Name</td>
+                        <td>{{row.VNAME}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
