Changed app name, added favicon
Signed-off-by: nmyers322 <nmyers322@gmail.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,8 @@
 <!-- info -->
 <div class="row">
-    <!-- <button class="btn btn-block btn-default btn-lg" data-ng-click="info()">
-        <span class="glpyhicon glyphicon-info"></span> Open/Close Info
-    </button> -->
-    <div class="well" data-ng-show="show_info">
+    <div class="well">
         <h2>Welcome!</h2>
-        <p><strong>EnviroCheck</strong> is here to help you identify environmental hazards in your area using data gathered and aggregated from the EPA (Environmental Protection Agency) database. It will only work in the United States, since that is where the data is gathered. The EPA's database can be quite slow, so you will have to click on each resource to load the data and then wait for the results. <b>Currently, the only resource searchable is local tap water systems.</b></p>
+        <p><strong>TapChecker</strong> is here to help you identify contaminants in your area's tap water system using data gathered and aggregated from the EPA (Environmental Protection Agency) database. It will only work in the United States, since that is where the data is gathered. The EPA's database can be quite slow, so you will have to click on the button below to load the results. </p>
     </div>
 </div>
 
